--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test-sdk": "node --trace-warnings --unhandled-rejections=strict build/express/sdk/index.js ./src/example/controllers ./test-sdk"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.224.0",
     "@prisma/client": "^3.10.0",
     "@types/stompjs": "^2.3.5",
     "ajv": "^8.11.0",
@@ -35,7 +36,8 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "multer": "^1.4.4",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "node-schedule": "^2.1.0",
     "qrcode": "^1.5.0",
     "query-string": "^7.1.1",
@@ -56,6 +58,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.179",
     "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^3.0.0",
     "@types/node": "^17.0.21",
     "@types/node-schedule": "^2.1.0",
     "@types/qrcode": "^1.4.2",
