--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fuseble.inc/node",
-  "version": "1.3.5",
+  "version": "1.4.0",
   "main": "build/index.js",
   "bin": "build/express/sdk/index.js",
   "repository": "https://github.com/outqource/outqource-node",
@@ -36,6 +36,7 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "node-schedule": "^2.1.0",
@@ -57,6 +58,7 @@
     "@types/flat": "^5.0.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.179",
+    "@types/mime-types": "^2.1.1",
     "@types/multer": "^1.4.7",
     "@types/multer-s3": "^3.0.0",
     "@types/node": "^17.0.21",
