--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "apple-auth": "^1.0.7",
     "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "events": "^3.3.0",
     "exceljs": "^4.3.0",
-    "express": "^4.17.2",
+    "express": "^4.18.2",
     "express-validator": "^6.14.0",
     "firebase-admin": "^10.0.2",
     "flat": "^5.0.2",
