--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "events": "^3.3.0",
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
-    "express-validator": "^6.14.0",
     "firebase-admin": "^10.0.2",
     "flat": "^5.0.2",
     "form-data": "^4.0.0",
@@ -40,14 +39,11 @@
     "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
-    "node-schedule": "^2.1.0",
+    "paypal-rest-sdk": "^1.8.1",
     "qrcode": "^1.5.0",
     "query-string": "^7.1.1",
-    "redis": "^4.0.4",
     "sendbird": "^3.1.29",
-    "sharp": "^0.30.1",
-    "socket.io": "^4.4.1",
-    "socket.io-redis": "^6.1.1",
+    "sharp": "^0.31.2",
     "swagger-ui-express": "^4.3.0",
     "ts-node": "^10.8.2",
     "yup": "^0.32.11"
@@ -65,6 +61,7 @@
     "@types/multer-s3": "^3.0.0",
     "@types/node": "^17.0.21",
     "@types/node-schedule": "^2.1.0",
+    "@types/paypal-rest-sdk": "^1.7.6",
     "@types/qrcode": "^1.4.2",
     "@types/sharp": "^0.29.5",
     "@types/swagger-ui-express": "^4.1.3",
