--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "moduleResolution": "Node",
-    "typeRoots": ["./src/types"],
+    "typeRoots": ["./src/@types"],
     "declaration": true
   },
   "include": ["src/**/*.ts", "src/*.ts", "files/*.ts"],
