--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "events": "^3.3.0",
@@ -42,7 +43,7 @@
     "paypal-rest-sdk": "^1.8.1",
     "qrcode": "^1.5.0",
     "query-string": "^7.1.1",
-    "sendbird": "^3.1.29",
+    "sendbird-platform-sdk": "^0.0.16",
     "sharp": "^0.31.2",
     "swagger-ui-express": "^4.3.0",
     "ts-node": "^10.8.2",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/crypto-js": "^4.1.1",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
