--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fuseble.inc/node",
-  "version": "1.7.4",
+  "version": "1.8.0",
   "main": "build/index.js",
   "repository": "https://github.com/fuseble/node",
   "author": "AlpoxDev <contact@fuseble.com>",
@@ -15,7 +15,7 @@
     "lint:staged": "lint-staged"
   },
   "dependencies": {
-    "@prisma/client": "^3.10.0",
+    "@prisma/client": "^4.14.0",
     "@socket.io/redis-adapter": "^8.0.1",
     "ajv": "^8.11.0",
     "apple-auth": "^1.0.7",
@@ -34,7 +34,7 @@
     "form-data": "^4.0.0",
     "hangul-js": "^0.2.6",
     "http": "^0.0.1-security",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
     "paypal-rest-sdk": "^1.8.1",
@@ -71,6 +71,7 @@
     "lint-staged": "^13.0.2",
     "nodemon": "^2.0.15",
     "prettier": "^2.7.1",
+    "prisma": "^4.14.0",
     "tsc-alias": "^1.8.2",
     "tsconfig-paths": "^4.1.2",
     "typescript": "^4.5.4"
